--- a/Include/Mainmatter/5-.tex
+++ b/Include/Mainmatter/5-.tex
@@ -59,7 +59,7 @@ After choosing the architecture we experimented with minibatch sizes, activation
     \label{Table:NN2}
 \end{table}
 
-Even though it does not seem as many possible choices this already gives us a total of 730 different combinations where the function then chooses 219 random combinations. From this there is a clear indication that the network performs best when $\alpha_f = 0.8$, $\alpha = 0.99$, dropout rate in the last hidden layer is $0$ and the learning rate is $0.0005$. When the other hyperparameters are varied the errors in the validation set is the same. Hence we try running 
+Even though it does not seem as many possible choices this already gives us a total of 730 different combinations where the function then chooses 219 random combinations. From this there is a clear indication that the network performs best when $\alpha_f = 0.8$, $\alpha = 0.99$, dropout rate in the last hidden layer is $0$ and the learning rate is $0.0005$. These results can be found in  When the other hyperparameters are varied the errors in the validation set is the same. Hence we try running 
 
 
 
